TODO: José Micó          (3.0K)   1 inbox       Error connecting to hosts resolved from /etc/hosts
TODO: Daniel Carosone    (5.2K)   1 inbox       AnyEvent::IO vs AnyEvent::AIO (doc patch)
TODO: maybe implement env variable to give hosts precedence
	- uts46data.pl couldn't be found due to wrong naming of the file
          (reported by Fulko Hew).
	- AnyEvent::Debug shell can now run coro shell commands, if available.
	- t/63* tests were wrongly in MANIFEST.
        - mention IO::AIO as optional dependency.
        - kernel.org's finger server went MIA, switch to freebsd.org and
          icculus.org.
        - handle lone \015's properly in AE::Handle's default line read
          (reported by various people).
        - hard-disable $^W in most tests, it generates too much garbage output.
        - use a (hopefully) more future-proof method to emulate common::sense.
        - upgrade to UTS-46:6.2.0.

7.04 Thu Nov 15 02:23:58 CET 2012
	- debugging code left in.

7.03 Thu Nov 15 02:16:11 CET 2012
	- AnyEvent::Socket::inet_aton did not work when dns resolution was
          used to find the addresses (analyzed and patch by Maxime Soulé).
        - fix a memory leak in the /etc/hosts lookup code when hosts don't
          resolve and are not in hosts (analyzed by sten).

7.02 Tue Aug 14 04:27:58 CEST 2012
	- AnyEvent::Util::run_cmd could block indefinitely (analyzed and test
          program by Yorhel).
	- verified that AnyEvent::Socket follows RFC5952.
        - try to parse "ADDR#PORT" in addition to "ADDR PORT".

7.01 Sun May 13 01:03:17 CEST 2012
	- fail with EPROTO in AnyEvent::Handle wqhen TLS is requested but
          not available, instead of throwing an exception.
	- use File::Spec to get the tmpdir in t/*, to avoid needless
          failures on (most, not mine :) windows boxes.
        - new handle read types: tls_detect and tls_autostart.

7.0  Fri Apr 13 06:33:30 CEST 2012
        - child watchers are broken in POE 1.352 (also many earlier